<fix>Alignements + animations fixes & updates

--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ a {
   border-radius: 40px 40px 0px 0px;
   position: relative;
   top: -50px;
-  padding: 15px 15px 35px 15px;
+  padding: 15px 15px 60px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -513,6 +513,7 @@ a {
   width: 100%;
   height: 30%;
   margin-top: 0px;
+  margin-bottom: 10px;
 }
 @media screen and (min-width: 992px) {
   .BlocMenu .BlocEntrees {
@@ -526,13 +527,14 @@ a {
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   padding-bottom: 5px;
 }
 .BlocMenu .BlocPlats {
   width: 100%;
   height: 30%;
   margin-top: 0px;
+  margin-bottom: 10px;
 }
 @media screen and (min-width: 992px) {
   .BlocMenu .BlocPlats {
@@ -546,13 +548,14 @@ a {
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   padding-bottom: 5px;
 }
 .BlocMenu .BlocDesserts {
   width: 100%;
   height: 30%;
   margin-top: 0px;
+  margin-bottom: 10px;
   margin-bottom: 25px;
 }
 @media screen and (min-width: 992px) {
@@ -567,7 +570,7 @@ a {
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   padding-bottom: 5px;
 }
 
@@ -791,7 +794,7 @@ a {
 
 .Menucard {
   width: 100%;
-  height: 70px;
+  height: 67px;
   margin-top: 15px;
   background-color: #fff;
   border-radius: 15px;
@@ -800,23 +803,26 @@ a {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
+  position: relative;
   cursor: pointer;
 }
 .Menucard__plat {
-  width: 85%;
+  width: 100%;
   height: 100%;
-  padding: 10px 0px 10px 5px;
+  padding: 10px 0px 10px 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .Menucard__plat--title {
   width: 100%;
   height: 50%;
   font-size: 18px;
   font-weight: 600;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -830,14 +836,15 @@ a {
   text-overflow: ellipsis;
 }
 .Menucard__prix {
-  padding: 0px 10px 15px 10px;
-  width: 17%;
+  width: 20%;
+  padding: 15px 20px;
   font-size: 16px;
   font-weight: 600;
   margin-top: auto;
+  margin-right: auto;
 }
 .Menucard__check {
-  height: 70px;
+  height: 67px;
   width: 17%;
   background-color: #99e2d0;
   border-radius: 0px 15px 15px 0px;
@@ -846,7 +853,6 @@ a {
   justify-content: center;
   align-items: center;
   margin-right: -60px;
-  opacity: 0;
 }
 .Menucard__check--icon {
   font-size: 28px;
@@ -948,104 +954,93 @@ a {
   animation-play-state: running;
 }
 
-/* TRANSITIONS */
+/* BLOC PLAT */
 .Menucard:hover .Menucard__plat {
-  width: 65%;
+  width: 66%;
+  transition: all 1s linear;
+}
+
+/* TRANSLATE */
+.Menucard__check {
+  transition: all 1s;
 }
 
 .Menucard:hover .Menucard__check {
   transition-property: transform;
   transform: translateX(-60px);
-  opacity: 1;
-  transition: all 3s linear;
+  transition: all 1s linear;
+}
+
+/* ROTATE */
+.Menucard__check--icon {
+  transition: all 0s;
+}
+
+.Menucard:hover .Menucard__check--icon {
+  transition: all 1s linear;
+  transform: rotate(360deg);
 }
 
 /* ANIMATION APPARATION MENUS */
 .Menucard-1 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 1s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 1s;
 }
 
 .Menucard-2 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 2s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 2s;
 }
 
 .Menucard-3 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 3s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 3s;
 }
 
 .Menucard-4 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 4s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 4s;
 }
 
 .Menucard-5 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 5s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 5s;
 }
 
 .Menucard-6 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 6s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 6s;
 }
 
 .Menucard-7 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 7s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 7s;
 }
 
 .Menucard-8 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 8s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 8s;
 }
 
 .Menucard-9 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 9s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 9s;
 }
 
 .Menucard-10 {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 3s;
-  transition-timing-function: linear;
-  transition-delay: 10s;
+  animation: Apparition 3s 1 linear forwards;
+  animation-delay: 10s;
 }
 
-body:hover .Menucard {
-  opacity: 1;
-  transform: translateY(-20px);
+@keyframes Apparition {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(-20px);
+  }
 }
-
 /* EFFET HOVER DES BOUTONS */
 .filterbutton:hover {
   background-color: #ffdff6;
@@ -1071,6 +1066,7 @@ path:hover {
   fill-opacity: 1;
   stroke-opacity: 0;
   transition-duration: 3s;
+  cursor: pointer;
 }
 
 html {
