--- a/sass/abstracts/mixins.scss
+++ b/sass/abstracts/mixins.scss
@@ -4,7 +4,7 @@
 	text-transform: uppercase;
 	width: 40px;
 	border-bottom: 3px solid $third-color;
-	margin-bottom: 25px;
+	margin-bottom: 35px;
 	padding-bottom: 5px;
 }
 
@@ -12,4 +12,5 @@
 	width: 100%;
 	height: 30%;
 	margin-top: 0px;
+	margin-bottom: 10px;
 }
