--- a/sass/components/check.scss
+++ b/sass/components/check.scss
@@ -1,36 +1,29 @@
-/* TRANSITIONS */
+/* BLOC PLAT */
 
 .Menucard:hover .Menucard__plat {
-	width: 65%;
+	width: 66%;
+	transition: all 1s linear;
+}
+
+/* TRANSLATE */
+
+.Menucard__check {
+	transition: all 1s;
 }
 
 .Menucard:hover .Menucard__check {
 	transition-property: transform;
 	transform: translateX(-60px);
-	opacity: 1;
-	transition: all 3s linear;
+	transition: all 1s linear;
 }
 
-// .Menucard__IconPart {
-// 	transition-property: width;
-// 	transition-duration: 0.5s;
-// 	transition-timing-function: ease-in-out;
-// }
+/* ROTATE */
 
-// .Menucard__IconPart--check {
-// 	transition: 0.5s;
-// 	transition-delay: 0ms;
-// 	transition-timing-function: linear;
-// }
+.Menucard__check--icon {
+	transition: all 0s;
+}
 
-// /* RESPONSIVE */
-
-// .Menucard:hover .Menucard__IconPart {
-// 	width: 15%;
-// 	opacity: 1;
-// }
-// .Menucard:hover .Menucard__IconPart--check {
-// 	cursor: pointer;
-// 	opacity: 1;
-// 	transform: rotate(360deg);
-// }
+.Menucard:hover .Menucard__check--icon {
+	transition: all 1s linear;
+	transform: rotate(360deg);
+}
