--- a/sass/components/coeur.Scss
+++ b/sass/components/coeur.Scss
@@ -9,4 +9,5 @@ path:hover {
 	fill-opacity: 1;
 	stroke-opacity: 0;
 	transition-duration: 3s;
+	cursor: pointer;
 }
