--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -11,7 +11,7 @@
 	border-radius: 40px 40px 0px 0px;
 	position: relative;
 	top: -50px;
-	padding: 15px 15px 35px 15px;
+	padding: 15px 15px 60px 15px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
